
0.0.3 - 12 Jul 2011
* Keep unlinkat interface compatible with Netsys
* statvfs : return all fields, use POSIX names
* realpath : fix segfault on non-glibc systems
* New bindings :
  * backtrace
  * setenv unsetenv clearenv
  * linkat symlinkat
  * mkdtemp

0.0.2 - 26 Dec 2010
* New bindings :
  * getrlimit setrlimit
  * getpriority setpriority
  * ptrace (minimal)
  * renameat mkdirat
  * mlockall munlockall
  * strftime strptime asctime
  * tzname
  * posix_openpt grantpt unlockpt ptsname (Niki Yoshiuchi)
  * getsid
  * ctermid
  * is_open_descr
  * tcgetpgrp tcsetpgrp
  * int_of_file_descr file_descr_of_int
  * sys_exit
* Separate configure test for fsync and fdatasync
* ExtUnix.All.have function to test for features at runtime
* Skip tests of functions not available on the current platform

0.0.1 - 7 Nov 2010
* First release, implemented bindings :
  * fsync fdatasync
  * eventfd signalfd
  * statvfs fstatvfs
  * dirfd openat unlinkat fstatat
  * uname
  * fadvise fallocate
  * ttyname setpgid getpgid setreuid setregid
  * realpath
